This file contains a brief overview of the changes made in each release. A
detailed description of changes is available at:

http://micewww.pp.rl.ac.uk/projects/maus/roadmap

Release Notes
=============
MAUS-v2.8.1
  The following changes were made:
    - Third party: GEANT4: updated data download url
MAUS-v2.8.0
  The following changes were made:
    - Tracker: new executable directory in bin/scifi
    - Tracker: SciFiSeed now a full data structure class
    - Tracker: DEMO radiation modelling now available via MapCppTrackerRadiationNoiseModel
    - Tracker: Pattern recognition: momentum corrections now available
    - Tracker: Pattern recognition: large improvement in efficiency
    - Tracker: Pattern recognition: covariance of fits now correctly returned
    - Tracker: Pattern recognition: Analysis: updates to efficiency calculation code
    - Tracker: Track fit: performance updates
    - Global recon: global tracker added
    - Third party: G4Beamline build bug fixed by disabling ROOT linking
MAUS-v2.7.0
  The following changes were made:
    - Tracker: pattern recognition sz cut increased -> performance boost
    - Tracker: pattern recognition efficiency analysis code upgraded
    - Tracker: python mc-recon bridge module added
    - Tracker: calibration script update
    - Global recon: various updated, including better KL data processing
    - Geometry: ParentFileCreation updated to handle focus coil off mode
    - Utilities: New utils added for offline reconstruction (analyze_data_fast_turnaround)
    - Third party: CMake added
    - Third party: gtest upgraded to version 1.8.0
    - Third party: Xerces upgraded to version 3.1.4
    - Third party: Numpy upgraded to version 1.11.2
    - Third party: pylint upgraded to version 1.6.3
    - Third party: ROOT upgraded to 5.34.36, now uses CMake
MAUS-v2.6.0
  The following changes were made:
    - Global reconstruction TRef issue fixed, solving issue #1858
    - Global reconstruction other updates