@@ -1,4 +1,4 @@
-MAUS release version 2.8.1
+MAUS release version 2.8.2
 
 1.  Introduction
 
