@@ -38,6 +38,7 @@ def run():
     my_map.append(MAUS.MapCppTrackerClusterRecon()) # SciFi channel clustering
     my_map.append(MAUS.MapCppTrackerSpacePointRecon()) # SciFi spacepoint recon
     my_map.append(MAUS.MapCppTrackerPatternRecognition()) # SciFi track finding
+    my_map.append(MAUS.MapCppTrackerPRSeed()) # Set the Seed from PR
     my_map.append(MAUS.MapCppTrackerTrackFit()) # SciFi track fit
 
     my_map.append(MAUS.MapCppEMRPlaneHits())
