@@ -24,7 +24,7 @@
 #ifndef MAUS_VERSION_NUMBER
 #define MAUS_VERSION_NUMBER_X 2
 #define MAUS_VERSION_NUMBER_Y 8
-#define MAUS_VERSION_NUMBER_Z 1
+#define MAUS_VERSION_NUMBER_Z 2
 #define MAUS_VERSION_NUMBER() \
         (MAUS_VERSION_NUMBER_X*1000+\
         MAUS_VERSION_NUMBER_Y*100+\
